--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>iwanttotry.science</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css">
+    <link href='//fonts.googleapis.com/css?family=Roboto&subset=latin,latin-ext' rel='stylesheet'>
+  </head>
+  <body style="padding-top: 70px">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">iwanttotry.science</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <ul>
+        {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </body>
+</html>
