--- a/index.html
+++ b/index.html
@@ -6,25 +6,33 @@ title: you want to try science
   <head>
     <meta charset="utf-8">
     <title>iwanttotry.science</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css">
-    <link href='//fonts.googleapis.com/css?family=Roboto&subset=latin,latin-ext' rel='stylesheet'>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
   </head>
-  <body style="padding-top: 70px">
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">iwanttotry.science</a>
+  <body>
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper">
+          <a class="brand-logo center" href="/">iwanttotry.science</a>
         </div>
-      </div>
-    </nav>
-    <div class="container">
-      <ul>
-        {% for post in site.posts %}
-        <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-        {% endfor %}
-      </ul>
+      </nav>
     </div>
+    <div class="container-fluid">
+      <div class="row">
+        {% for post in site.posts %}
+        <div class="col s12 m3 l2">
+          <div class="card blue-grey">
+            <div class="card-content white-text">
+              <span class="card-title">{{ post.title }}</span>
+            </div>
+            <div class="card-action">
+              <a href="{{ post.url }}">No dobrze</a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
   </body>
 </html>
