never fade away

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: you want to try science
   <head>
     <meta charset="utf-8">
     <title>iwanttotry.science</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
   </head>
   <body>
