--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
 ---
-title: you want to try science
+title: so you want to try science
 ---
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>iwanttotry.science</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    {% include header.html %}
   </head>
   <body>
     <div class="navbar-fixed">
-      <nav>
+      <nav class="indigo">
         <div class="nav-wrapper">
-          <a class="brand-logo center" href="/">iwanttotry.science</a>
+          <a class="brand-logo center" href="/">{{ page.title }}</a>
         </div>
       </nav>
     </div>
     <div class="container-fluid">
       <div class="row">
-        {% for post in site.posts %}
+        {% assign posts = site.posts %}
+        {% for post in posts %}
         <div class="col s12 m3 l2">
-          <div class="card blue-grey">
-            <div class="card-content white-text">
-              <span class="card-title">{{ post.title }}</span>
+          <div class="card indigo">
+            {% if post.thumbnail %}
+            <div class="card-image">
+              <img src="{{ post.thumbnail }}" style="max-height:300px">
+              <span class="card-title {{ post.thumbnailtextcolor }}">{{ post.nickname }}</span>
             </div>
+            <div class="card-content white-text">
+              <p>{{ post.title }}</p>
+            </div>
+            {% else %}
+            <div class="card-content white-text">
+              <span class="card-title">{{ post.nickname }}</span>
+              <p>{{ post.title }}</p>
+            </div>
+            {% endif %}
             <div class="card-action">
-              <a href="{{ post.url }}">No dobrze</a>
+              <a href="{{ post.url }}">Do tablicy</a>
             </div>
           </div>
         </div>
         {% endfor %}
       </div>
     </div>
+    {% include footer.html %}
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
   </body>
