shooting at the moon to bring the sun up

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ title: so you want to try science
         </div>
       </nav>
     </div>
+    <div class="container">
+      <h2 class="center header indigo-text">Intrygujące eksperymenty<small>, za które <strong><em>może</em></strong> nie dostaniesz oceny niedostatecznej</h2>
+      <h5>Na tej stronie znajdziesz opisy i różnych doświadczeń wykonanych przez uczniów klasy 2d <small>mat-fiz-inf</small> <a href="http://lo01.pl">I Liceum Ogólnokształcącego im. Stanisława Staszica w Lublinie</a> w roku szkolnym 2015/16.</h5>
+    </div>
     <div class="container-fluid">
       <div class="row">
         {% assign posts = site.posts %}
