robbed of my eternity

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: so you want to try science
       <div class="row">
         {% assign posts = site.posts %}
         {% for post in posts %}{% unless post.secret %}
-        <div class="col s12 m3 l2">
+        <div class="col s12 m3">
           <div class="card indigo">
             {% if post.thumbnail %}
             <div class="card-image">
