--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: so you want to try science
           <div class="card indigo">
             {% if post.thumbnail %}
             <div class="card-image">
-              <img src="{{ post.thumbnail }}" style="max-height:300px">
+              <a class="waves-effect" href="{{ post.url }}"><img src="{{ post.thumbnail }}" style="max-height:300px"></a>
               <span class="card-title {{ post.thumbnailtextcolor }}">{{ post.nickname }}</span>
             </div>
             {% if post.nickname != post.title %}<div class="card-content white-text"><p>{{ post.title }}</p></div>{% endif %}
