--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ title: so you want to try science
         <div class="col s12 m3">
           <div class="card indigo">
             {% if post.thumbnail %}
-            <div class="card-image">
-              <a class="waves-effect" href="{{ post.url }}"><img src="{{ post.thumbnail }}" style="max-height:300px"></a>
+            <div class="waves-effect waves-block waves-light card-image">
+              <a href="{{ post.url }}"><img src="{{ post.thumbnail }}" style="max-height:300px"></a>
               <span class="card-title {{ post.thumbnailtextcolor }}">{{ post.nickname }}</span>
             </div>
             {% if post.nickname != post.title %}<div class="card-content white-text"><p>{{ post.title }}</p></div>{% endif %}
