--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ title: so you want to try science
     <div class="container-fluid">
         {% assign posts = site.posts %}
         {% for post in posts %}{% unless post.secret %}
-          <div class="card indigo z-depth-5">
+          <div class="card waves-effect waves-block waves-light indigo z-depth-5">
             {% if post.thumbnail %}
-            <div class="waves-effect waves-block waves-light card-image">
+            <div class="card-image">
               <a href="{{ post.url }}"><img src="{{ post.thumbnail }}" style="max-height:300px"></a>
               <a href="{{ post.url }}" class="indigo card-title {{ post.thumbnailtextcolor }}">{{ post.nickname }}</a>
             </div>
